# imgdeck

./: .gitignore  AGENTS.md  LICENSE  README.md  imgdeck.py  pyproject.toml
app-store/: AppReviewNotes.md  AppStoreMetadata.md  PrivacyPolicy.md  README.md  Support.md
app-store/screenshots/: README.md
dist-swift/: README.md
docs/: _config.yml  index.md  privacy.md  support.md
macos/ImgDeck/: ContentView.swift  ImageDeckViewModel.swift  ImgDeckApp.swift  Localization.swift  Models.swift  PageRenderer.swift  SettingsView.swift
macos/ImgDeck.xcodeproj/: project.pbxproj
macos/ImgDeck/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/ImgDeckTests/: PageRendererTests.swift
scripts/: build-swift-app.sh
tests/: test_imgdeck.py
