[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgdeck"
version = "1.0.0"
description = "A GUI application for arranging images on an A4 page"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "Pillow>=8.0.0",
]

[project.scripts]
imgdeck = "imgdeck:main"

[tool.setuptools]
py-modules = ["imgdeck"]
